# cpp.Library-Inventory-System-V3

./: .gitignore  CMakeLists.txt  README.md
Data/: readme.txt
assets/: LibraryV3.rc
include/: Book.h  FileHandlers.h  Library.h  Utils.h
installer/: LibraryInstaller.iss
src/: Book.cpp  FileHandlers.cpp  Library.cpp  Utils.cpp  main.cpp
